text improvements and links and stuff

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 	</div>
 
 	<div id="download">
-	Open Advice is a knowledge collection from a wide variety of Free Software projects. It answers the question what 42 prominent contributors would have 
-	liked to know when they started so you can get a head-start no matter how and where you contribute. <br> 
+	Open Advice is a knowledge collection from a wide variety of Free Software projects. It answers the question what 42 prominent contributors would have liked to know when they started so you can get a head-start no matter how and where you contribute. <br> 
 	   <h2> <img src="images/read.gif" height="50px" align="left"/> Read More </h2>  <br> 
 	   <h2> <img src="images/download.gif" height="50px" align="left"/> Download PDF </h2> <br>
 	   <h2> <img src="images/cart.png" height="50px" align="left"/> Buy Printed Edition </h2>
@@ -32,62 +31,83 @@
 	<h1> Author Grid </h1>
 	<table>
 	<tr> 
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/>
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/> 
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/>
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/> 
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/>
-	<td><img src="images/ph.png" height="70px"/>  
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>  
 	</tr>
 	<tr> 
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/>
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/> 
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/>
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/> 
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/>
-	<td><img src="images/ph.png" height="70px"/>  
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td> 
 	</tr>
 	<tr> 
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/>
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/> 
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/>
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/> 
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/>
-	<td><img src="images/ph.png" height="70px"/> 
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td> 
 	</tr>
 	<tr> 
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/>
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/> 
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/>
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/> 
-	<td><img src="images/ph.png" height="70px"/> <td><img src="images/ph.png" height="70px"/>
-	<td><img src="images/ph.png" height="70px"/> 
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td><img src="images/ph.png" height="70px"/></td>
+	<td></td>
 	</tr>
-	
 	</table>
 	</div>
 
 	<div id="f2">
-	You can buy a printed edition of Open Advice. Profits will be donated to [Creative Commons].
+	You can buy a printed edition of Open Advice.
     	<h2> <img src="images/Amazon.gif" width="400px" />Buy from Amazon </h2>
         <h2> <img src="images/lulu.gif" width="400px" />Order from lulu </h2>
 	
 	</div>
 
 	<div id="f1">
-	    Open Advice is available as a free download under the [CC-BY-SA License]. You are free to share it with anyone.
+	    Open Advice is available as a free download under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a> license. You are encouraged to share it with anyone.
 	    <h2>  Download  </h2>
-	    <h3> [get source]/[report bugs] </h3>
+	    <h3> <a href=""http://github.com/lydiapintscher/Open-Advice>get source</a>/<a href="http://github.com/lydiapintscher/Open-Advice/issues">report bugs</a></h3>
 	</div>
 	
 	<div id="about">
 	
-	     We hope that after reading the book you&#39;re very excited about getting started contributing to a project. <a href="#">OpenHatch </a> is 
+	     We hope that after reading the book you are very excited about contributing to a project. <a href="http://openhatch.org">OpenHatch </a> is 
 	     a website where you can find a lot of beginner tasks from a great variety of projects. What are you waiting for? Today is the day to get started.
             <h2> stay connected </h2>
             <ul type="none">
-	    <li > <a> <img src="images/identi.png" height="100px" /> </br>identi.ca group </a> </li>
-	    <li > <img src="images/facebook.png" height="100px" /> </br>facebook fanpage </a> </li>
+	      <li><a><img src="images/identi.png" height="100px" />identi.ca group</a></li>
+	      <li><a><img src="images/facebook.png" height="100px" />facebook fanpage</a></li>
+	      <li><a href="http://lists.openhatch.org/mailman/listinfo/openadvice">discussion mailing list</a></li>
+	      <li><a href="http://lists.openhatch.org/mailman/listinfo/openadvice-announce">announcement mailing list</a></li>
 	    </ul>
 	</div>
 
