--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ This book is the answer to "What would you have liked to know when you started c
     <div id="dwnbox">
     	<h1>Download</h1>
         <h2>Open Advice is available as a free download under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a> license. You are encouraged to share it with anyone.</h2>
-        <img src="images/pdf.png" alt="Download" id="download">
+        <a href="Open-Advice.pdf"><img src="images/pdf.png" alt="Download" id="download"></a>
 	<a href="http://github.com/lydiapintscher/Open-Advice">get source</a><br><a href="http://github.com/lydiapintscher/Open-Advice/issues">report bugs</a>
     </div>
     <div id="buybox">
