--- a/index.html
+++ b/index.html
@@ -89,48 +89,49 @@ $(document).ready(function() {
     <h1>Authors</h1>
     <div id="piccontainer">
     <div class="pic"><a href="author.html#Alexandra"><img src="images/photos/Alexandra.jpg" height="87" width="87" alt="Alexandra"></a></div>
-     <div class="pic"><a href="author.html#Anne  "><img src = "images/photos/Anne.jpg "  height="87" width="87" alt="Anne"></a></div> 
-     <div class="pic"><a href="author.html#Atul "><img src = "images/photos/Atul.jpg "  height="87" width="87" alt="Atul"></a></div>
-      <div class="pic"><a href="author.html#Dave  "><img src = "images/photos/Dave.jpg "  height="87" width="87" alt="Dave"></a></div> 
-      <div class="pic"><a href="author.html#Duke  "><img src = "images/photos/Duke.jpg "  height="87" width="87" alt="Duke"></a></div> 
-      <div class="pic"><a href="author.html#Evan  "><img src = "images/photos/Evan.jpg "  height="87" width="87" alt="Evan"></a></div> 
-      <div class="pic"><a href="author.html#Federico  "><img src = "images/photos/Federico.jpg "  height="87" width="87" alt="Federico"></a></div> 
-      <div class="pic"><a href="author.html#Frank  "><img src = "images/photos/Frank.jpg "  height="87" width="87" alt="Frank"></a></div> 
-      <div class="pic"><a href="author.html#Georg  "><img src = "images/photos/Georg.jpg "  height="87" width="87" alt="Georg"></a></div> 
-      <div class="pic"><a href="author.html#Guillaume  "><img src = "images/photos/Guillaume.jpg "  height="87" width="87" alt="Guillaume"></a></div> 
-      <div class="pic"><a href="author.html#Henri  "><img src = "images/photos/Henri.jpg "  height="87" width="87" alt="Henri"></a></div> 
-      <div class="pic"><a href="author.html#Jos  "><img src = "images/photos/Jos.jpg "  height="87" width="87" alt="Jos"></a></div> 
-      <div class="pic"><a href="author.html#Leslie  "><img src = "images/photos/Leslie.jpg "  height="87" width="87" alt="Leslie"></a></div> 
-      <div class="pic"><a href="author.html#Lydia  "><img src = "images/photos/Lydia.png "  height="87" width="87" alt="Lydia"></a></div> 
-      <div class="pic"><a href="author.html#Mairin  "><img src = "images/photos/Mairin.jpg "  height="87" width="87" alt="Mairin"></a></div> 
-      <div class="pic"><a href="author.html#Markus  "><img src = "images/photos/Markus.jpg "  height="87" width="87" alt="Markus"></a></div> 
-      <div class="pic"><a href="author.html#Noirin "><img src = "images/photos/Noirin.jpg "  height="87" width="87" alt="Noirin"></a></div> 
-      <div class="pic"><a href="author.html#Rich  "><img src = "images/photos/Rich.jpg "  height="87" width="87" alt="Rich"></a></div> 
-      <div class="pic"><a href="author.html#Runa  "><img src = "images/photos/Runa.jpg "  height="87" width="87" alt="Runa"></a></div> 
-      <div class="pic"><a href="author.html#Selena  "><img src = "images/photos/Selena.jpg "  height="87" width="87" alt="Selena"></a></div> 
-      <div class="pic"><a href="author.html#Shaun  "><img src = "images/photos/Shaun.jpg "  height="87" width="87" alt="Shaun"></a></div> 
-      <div class="pic"><a href="author.html#Stuart  "><img src = "images/photos/Stuart.jpg "  height="87" width="87" alt="Stuart"></a></div> 
-      <div class="pic"><a href="author.html#TillA  "><img src = "images/photos/TillA.jpg "  height="87" width="87" alt="TillA"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Andre"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+     <div class="pic"><a href="author.html#Anne"><img src = "images/photos/Anne.jpg "  height="87" width="87" alt="Anne"></a></div> 
+      <div class="pic"><a href="author.html#Ara"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Armijin"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+     <div class="pic"><a href="author.html#Atul"><img src = "images/photos/Atul.jpg "  height="87" width="87" alt="Atul"></a></div>
+      <div class="pic"><a href="author.html#Austin"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Carlo"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Dave"><img src = "images/photos/Dave.jpg "  height="87" width="87" alt="Dave"></a></div> 
+      <div class="pic"><a href="author.html#Duke"><img src = "images/photos/Duke.jpg "  height="87" width="87" alt="Duke"></a></div> 
+      <div class="pic"><a href="author.html#Eugene"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Evan"><img src = "images/photos/Evan.jpg "  height="87" width="87" alt="Evan"></a></div> 
+      <div class="pic"><a href="author.html#Federico"><img src = "images/photos/Federico.jpg "  height="87" width="87" alt="Federico"></a></div> 
+      <div class="pic"><a href="author.html#Felipe"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Frank"><img src = "images/photos/Frank.jpg "  height="87" width="87" alt="Frank"></a></div> 
+      <div class="pic"><a href="author.html#Gareth"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Georg"><img src = "images/photos/Georg.jpg "  height="87" width="87" alt="Georg"></a></div> 
+      <div class="pic"><a href="author.html#Guillaume"><img src = "images/photos/Guillaume.jpg "  height="87" width="87" alt="Guillaume"></a></div> 
+      <div class="pic"><a href="author.html#Henri"><img src = "images/photos/Henri.jpg "  height="87" width="87" alt="Henri"></a></div> 
+      <div class="pic"><a href="author.html#Jeff"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div>
+      <div class="pic"><a href="author.html#Jonathan"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Jono"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Jos"><img src = "images/photos/Jos.jpg "  height="87" width="87" alt="Jos"></a></div> 
+      <div class="pic"><a href="author.html#Kai"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Kevin"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Leslie"><img src = "images/photos/Leslie.jpg "  height="87" width="87" alt="Leslie"></a></div> 
+      <div class="pic"><a href="author.html#Lydia"><img src = "images/photos/Lydia.png "  height="87" width="87" alt="Lydia"></a></div> 
+      <div class="pic"><a href="author.html#Mairin"><img src = "images/photos/Mairin.jpg "  height="87" width="87" alt="Mairin"></a></div> 
+      <div class="pic"><a href="author.html#Markus"><img src = "images/photos/Markus.jpg "  height="87" width="87" alt="Markus"></a></div> 
+      <div class="pic"><a href="author.html#Noirin"><img src = "images/photos/Noirin.jpg "  height="87" width="87" alt="Noirin"></a></div> 
+      <div class="pic"><a href="author.html#Rich"><img src = "images/photos/Rich.jpg "  height="87" width="87" alt="Rich"></a></div> 
+      <div class="pic"><a href="author.html#Robert"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Runa"><img src = "images/photos/Runa.jpg "  height="87" width="87" alt="Runa"></a></div> 
+      <div class="pic"><a href="author.html#Sally"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Selena"><img src = "images/photos/Selena.jpg "  height="87" width="87" alt="Selena"></a></div> 
+      <div class="pic"><a href="author.html#Shane"><img src = "images/photos/Shane.jpg "  height="87" width="87"></a></div>
+      <div class="pic"><a href="author.html#Shaun"><img src = "images/photos/Shaun.jpg "  height="87" width="87" alt="Shaun"></a></div> 
+      <div class="pic"><a href="author.html#Stuart"><img src = "images/photos/Stuart.jpg "  height="87" width="87" alt="Stuart"></a></div> 
+      <div class="pic"><a href="author.html#Thiago"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Thom"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
       <div id="piccontainer1">
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div> 
-      <div class="pic"><a href="author.html#  "><img src = "images/photos/ "  height="87" width="87"></a></div>
+      <div class="pic"><a href="author.html#TillA"><img src = "images/photos/TillA.jpg "  height="87" width="87" alt="TillA"></a></div>
+      <div class="pic"><a href="author.html#TillJ"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
+      <div class="pic"><a href="author.html#Vincent"><img src = "images/photos/dummy.png "  height="87" width="87"></a></div> 
       </div>
     </div>
     </div>
@@ -142,28 +143,27 @@ This book is the answer to "What would you have liked to know when you started c
     </div>
     <div id="dwnbox">
     	<h1>Download</h1>
-        <h2>Open Advice is available as a free download under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a> license. You are encouraged to share it with anyone.</h2>
+        <h2>Open Advice is available as a free download under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a> license. You are encouraged to share it with anyone. (<a href="http://github.com/lydiapintscher/Open-Advice">get source</a> or <a href="http://github.com/lydiapintscher/Open-Advice/issues">report bugs</a>)</h2>
         <a href="Open-Advice.pdf"><img src="images/pdf.png" alt="Download" id="download"></a>
-	<a href="http://github.com/lydiapintscher/Open-Advice">get source</a><br><a href="http://github.com/lydiapintscher/Open-Advice/issues">report bugs</a>
     </div>
     <div id="buybox">
     	<h1>Buy</h1>
         <h2>You can buy a printed edition of Open Advice.</h2>
         <img src="images/amazon.png" alt="Amazon.com" id="amazon">
         <img src="images/lulu.png" alt="Lulu.com" id="lulu"><br>
-        <p>Buy from Amazon</p>
-		<p id="p2">Order from Lulu</p>
+        <p>Buy from Amazon</br>(coming soon)</p>
+	<p id="p2">Buy from Lulu</p>
     </div>
     <div id="conbox">
     <h1 style="color:white;">Stay Connected</h1>
     <h2 style="color:white;">We hope that after reading the book you are very excited about contributing to a project. <a href="http://openhatch.org">OpenHatch </a> is a website where you can find a lot of beginner tasks from a great variety of projects. What are you waiting for? Today is the day to get started. You can subscribe to the <a href="http://lists.openhatch.org/mailman/listinfo/openadvice-announce">announcement</a> and the <a href="http://lists.openhatch.org/mailman/listinfo/openadvice">discussion mailing list</a>.</h2>
     <div class="conin" id="con1">
-    <div class="coninin"><h2 style="color:white;">identi.ca Group</h2>
+      <div class="coninin"><a href="http://identi.ca/openadvice"><h2 style="color:white;">identi.ca</h2></a>
+      </div>
     </div>
-    </div>
-        <div class="conin" id="con2">
-        <div class="coninin2"><h2 style="color:white;">Facebook Fanpage</h2></div>
-    </div>
+    <div class="conin" id="con2">
+      <div class="coninin2"><a href="https://www.facebook.com/pages/Open-Advice/139095016210143"><h2 style="color:white;">Facebook</h2></a></div>
+      </div>
     </div>
     <div id="foobox"><p>
     This site was created by Debajyoti Datta, Saransh Sinha & Supreet Pal Singh</p>
