update cover and link to lulu.com page of the book

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@ This book is the answer to "What would you have liked to know when you started c
     	<h1>Buy</h1>
         <h2>You can buy a printed edition of Open Advice.</h2>
         <img src="images/amazon.png" alt="Amazon.com" id="amazon">
-        <img src="images/lulu.png" alt="Lulu.com" id="lulu"><br>
+        <a href="http://www.lulu.com/product/paperback/open-advice/18865584"><img src="images/lulu.png" alt="Lulu.com" id="lulu"></a><br>
         <p>Buy from Amazon</br>(coming soon)</p>
-	<p id="p2">Buy from Lulu</p>
+        <p id="p2"><a href="http://www.lulu.com/product/paperback/open-advice/18865584">Buy from Lulu</a></p>
     </div>
     <div id="conbox">
     <h1 style="color:white;">Stay Connected</h1>
