fixes and additions by Debajyoti

--- a/author.html
+++ b/author.html
@@ -425,6 +425,11 @@ $(document).ready(function() {
                          <div class="home1"><a href="http://jp.linkedin.com/in/shanecoughlan"><img src="images/home.png" height="25" width="25"></a></div>
                          </div>
                  </div>
+                 <div class="entry1" id="Austin">
+                 <div class="entimg"><img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entdet">Austin "scorche" Appel is an information security professional who spends his time breaking into things previously thought secure (with permission, of course). He is often seen around security/hacker conferences teaching people how to pick locks. In the open source world, he does a host of things for the Rockbox project and previously volunteered for the One Laptop Per Child project.
+                 </div>
+                 </div>
            </div>
     <div id="foobox"><p>
     This site was created by Debajyoti Datta, Saransh Sinha & Supreet Pal Singh</p>
