--- a/author.html
+++ b/author.html
@@ -385,7 +385,7 @@ $(document).ready(function() {
                          <div class="home"><a href="http://www.vuntz.net/"><img src="images/home.png" height="25" width="25"></a></div></div>
                  </div>
                   <div class="entry2" id="Sally">
-                 <div class="entimg"> <img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"> <img src="images/photos/Sally.jpg" height="200" width="200"></div>
                  <div class="entdet">Active in the Web since 1993, Sally Khudairi is the publicist behind some of the industry's most prominent standards and organizations. The former deputy to Sir Tim Berners-Lee and long-time champion of collaborative innovation, she helped launch The Apache Software Foundation in 1999, and was elected its first female and non-technical member. Sally is Vice President of Marketing and Publicity for The Apache Software Foundation, and Chief Executive of luxury brand communications consultancy HALO Worldwide.
                  </div>
                      <div class="lin2">
