--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ $(document).ready(function() {
       <div class="pic"><a href="author.html#Rich"><img src = "images/photos/Rich.jpg "  height="87" width="87" title="Rich"></a></div> 
       <div class="pic"><a href="author.html#Robert"><img src = "images/photos/dummy.png "  height="87" width="87" title="Robert"></a></div> 
       <div class="pic"><a href="author.html#Runa"><img src = "images/photos/Runa.jpg "  height="87" width="87" title="Runa"></a></div> 
-      <div class="pic"><a href="author.html#Sally"><img src = "images/photos/dummy.png "  height="87" width="87" title="Sally"></a></div> 
+      <div class="pic"><a href="author.html#Sally"><img src = "images/photos/Sally.jpg "  height="87" width="87" title="Sally"></a></div> 
       <div class="pic"><a href="author.html#Selena"><img src = "images/photos/Selena.jpg "  height="87" width="87" title="Selena"></a></div> 
       <div class="pic"><a href="author.html#Shane"><img src = "images/photos/Shane.jpg "  height="87" width="87" title="Shane"></a></div>
       <div class="pic"><a href="author.html#Shaun"><img src = "images/photos/Shaun.jpg "  height="87" width="87" title="Shaun"></a></div> 
