add Ara's photo

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ $(document).ready(function() {
     <div class="pic"><a href="author.html#Alexandra"><img src="images/photos/Alexandra.jpg" height="87" width="87" title="Alexandra"></a></div>
     <div class="pic"><a href="author.html#Andre"><img src = "images/photos/dummy.png "  height="87" width="87" title="Andre"></a></div> 
       <div class="pic"><a href="author.html#Anne"><img src = "images/photos/Anne.jpg "  height="87" width="87" title="Anne"></a></div> 
-      <div class="pic"><a href="author.html#Ara"><img src = "images/photos/dummy.png "  height="87" width="87" title="Ara"></a></div> 
+      <div class="pic"><a href="author.html#Ara"><img src = "images/photos/Ara.jpg "  height="87" width="87" title="Ara"></a></div> 
       <div class="pic"><a href="author.html#Armijin"><img src = "images/photos/dummy.png "  height="87" width="87" title="Armijn"></a></div> 
       <div class="pic"><a href="author.html#Atul"><img src = "images/photos/Atul.jpg "  height="87" width="87" title="Atul"></a></div>
       <div class="pic"><a href="author.html#Austin"><img src = "images/photos/dummy.png "  height="87" width="87" title="Austin"></a></div> 
