--- a/author.html
+++ b/author.html
@@ -318,7 +318,7 @@ $(document).ready(function() {
                  <div class="home"><a href="http://www.kblin.org/"><img src="images/home.png" height="25" width="25"></a></div></div>
                  </div>
                   <div class="entry2" id="Ara">
-                 <div class="entimg"> <img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"> <img src="images/photos/Ara.jpg" height="200" width="200"></div>
                  <div class="entdet">Ara Pulido is a testing engineer working for Canonical, first as part of the Ubuntu QA team, and now as part of the Hardware Certification team. Although she started her career as a developer, she quickly found out that what she really liked was testing the software. She is very interested in new testing techniques and tries to apply her knowledge to make Ubuntu better.</div>
                      <div class="lin2">
                          <div class = "fb1"><a href="https://twitter.com/#!/arapulido"><img src="images/twitter.png" height="25" width="25"></a></div>
