add Kevin's photo

--- a/author.html
+++ b/author.html
@@ -285,7 +285,7 @@ $(document).ready(function() {
                          <div class = "fb"><a href= "https://twitter.com/#!/jfelipe"><img src="images/twitter.png" height="25" width="25"></a></div></div>
                  </div>
                   <div class="entry2" id="Kevin">
-                 <div class="entimg"> <img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"> <img src="images/photos/Kevin.png" height="200" width="200"></div>
                  <div class="entdet">Kévin Ottens is a long term hacker of the KDE community. He contributed to the KDE Platform at large, with a strong emphasis on API design and frameworks architecture. Graduating in 2007, he holds a PhD in computer science which led him to work particularly on ontologies engineering and multi-agent systems. Kévin's job at KDAB includes developing research projects around KDE technologies. He still lives in Toulouse where he serves as part time teacher in his former university.</div>
                      <div class="lin2">
                          <div class = "fb1"><a href=" https://twitter.com/#!/dr_ervin"><img src="images/twitter.png" height="25" width="25"></a></div>
