--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ $(document).ready(function() {
       <div class="pic"><a href="author.html#Jono"><img src = "images/photos/dummy.png "  height="87" width="87" title="Jono"></a></div> 
       <div class="pic"><a href="author.html#Jos"><img src = "images/photos/Jos.jpg "  height="87" width="87" title="Jos"></a></div> 
       <div class="pic"><a href="author.html#Kai"><img src = "images/photos/dummy.png "  height="87" width="87" title="Kai"></a></div> 
-      <div class="pic"><a href="author.html#Kevin"><img src = "images/photos/dummy.png "  height="87" width="87" title="Kevin"></a></div> 
+      <div class="pic"><a href="author.html#Kevin"><img src = "images/photos/Kevin.png "  height="87" width="87" title="Kevin"></a></div> 
       <div class="pic"><a href="author.html#Leslie"><img src = "images/photos/Leslie.jpg "  height="87" width="87" title="Leslie"></a></div> 
       <div class="pic"><a href="author.html#Lydia"><img src = "images/photos/Lydia.png "  height="87" width="87" title="Lydia"></a></div> 
       <div class="pic"><a href="author.html#Mairin"><img src = "images/photos/Mairin.jpg "  height="87" width="87" title="Mairin"></a></div> 
