add photo and twitter link for Gareth

--- a/author.html
+++ b/author.html
@@ -392,10 +392,11 @@ $(document).ready(function() {
                          <div class="home1"><a href="http://www.linkedin.com/pub/sally-khudairi/0/61/349"><img src="images/home.png" height="25" width="25"></a></div></div>
                  </div>
                  <div class="entry1" id="Gareth">
-                 <div class="entimg"><img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"><img src="images/photos/Gareth.png" height="200" width="200"></div>
                  <div class="entdet">Gareth J. Greenaway has been actively involved in the Free & Open Source community since 1997 after discovering Linux. A majority of this involvement has been gathering like-minded people to learn and experience new elements of Free & Open Source software. This involvement began with a small Linux Users Group and has expanded into organizing the Southern California Linux Expo, also known as SCALE. As one of the founding members of the event, Gareth current holds two key positions with the organization. The first role is Conference Operations and the second is Community Relations.
                  </div>
                      <div class="lin1">
+                     <div class = "fb1"><a href="https://twitter.com/#!/garethgreenaway" ><img src="images/twitter.png" height="25" width="25"></a></div>
                          <div class="in"><a href="http://identi.ca/garethgreenaway"><img src="images/identica.png" height="25" width="25"></a></div>
                      </div>
                  </div>
