--- a/author.html
+++ b/author.html
@@ -293,7 +293,7 @@ $(document).ready(function() {
                   <div class="blog1"><a href="http://ervin.ipsquad.net/"><img src="images/blog.gif" height="25" width="25"></a></div></div>
                  </div>
                  <div class="entry1" id="Jeff">
-                 <div class="entimg"><img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"><img src="images/photos/Jeff.jpg" height="200" width="200"></div>
                  <div class="entdet">Jeff Mitchell spends his working days dabbling in all sorts of computer and networking technologies, his off-time dabbling in all sorts of FOSS projects and most enjoys a confluence of both. After serving as a system administrator in a professional capacity between 1999-2005, he has since kept his skills sharp by performing volunteer work for various workplace and FOSS projects. These days, most of his FOSS time is spent as a sysadmin for KDE and a core developer of Tomahawk Player. Jeff currently lives in Boston, USA.
                  </div>
                      <div class="lin1">
