--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ $(document).ready(function() {
       <div class="pic"><a href="author.html#Georg"><img src = "images/photos/Georg.jpg "  height="87" width="87" title="Georg"></a></div> 
       <div class="pic"><a href="author.html#Guillaume"><img src = "images/photos/Guillaume.jpg "  height="87" width="87" title="Guillaume"></a></div> 
       <div class="pic"><a href="author.html#Henri"><img src = "images/photos/Henri.jpg "  height="87" width="87" title="Henri"></a></div> 
-      <div class="pic"><a href="author.html#Jeff"><img src = "images/photos/dummy.png "  height="87" width="87" title="Jeff"></a></div>
+      <div class="pic"><a href="author.html#Jeff"><img src = "images/photos/Jeff.jpg "  height="87" width="87" title="Jeff"></a></div>
       <div class="pic"><a href="author.html#Jonathan"><img src = "images/photos/dummy.png "  height="87" width="87" title="Jonathan"></a></div> 
       <div class="pic"><a href="author.html#Jono"><img src = "images/photos/dummy.png "  height="87" width="87" title="Jono"></a></div> 
       <div class="pic"><a href="author.html#Jos"><img src = "images/photos/Jos.jpg "  height="87" width="87" title="Jos"></a></div> 
