add photo for Jonathan

--- a/author.html
+++ b/author.html
@@ -360,7 +360,7 @@ $(document).ready(function() {
                   <div class="home1"><a href="http://www.jonobacon.org"><img src="images/home.png" height="25" width="25"></a></div></div>
                  </div>
                  <div class="entry1" id="Jonathan">
-                 <div class="entimg"><img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"><img src="images/photos/Jonathan.jpg" height="200" width="200"></div>
                  <div class="entdet">Jonathan Riddell is a KDE and Kubuntu developer currently employed by Canonical. When not at a computer he canoes the rivers of Scotland.
                  </div>
                      <div class="lin1">
