add photo for Felipe
photo by Joi Ito

--- a/author.html
+++ b/author.html
@@ -278,7 +278,7 @@ $(document).ready(function() {
                  <div class="in1"><a href=" http://identi.ca/armijn" ><img src="images/identica.png" height="25" width="25"></a></div></div>
                  </div>
                  <div class="entry1" id="Felipe">
-                 <div class="entimg"><img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"><img src="images/photos/Felipe.jpg" height="200" width="200"></div>
                  <div class="entdet">Felipe Ortega is a researcher and project manager at Libresoft, a research group at University Rey Juan Carlos (URJC), Spain. Felipe develops novel methodologies to analyze open collaborative communities (like free software projects, Wikipedia and social networks). He has done extensive research with the Wikipedia project and its community of authors. He actively participates in research, promotion and education/training on libre software, especially in the Master on Libre Software at URJC. He is a strong advocate of open educational resources, open access in scientific publishing and open data in science.
                  </div>
                      <div class="lin1">
