--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ $(document).ready(function() {
       <div class="pic"><a href="author.html#Eugene"><img src = "images/photos/dummy.png "  height="87" width="87" title="Eugene"></a></div> 
       <div class="pic"><a href="author.html#Evan"><img src = "images/photos/Evan.jpg "  height="87" width="87" title="Evan"></a></div> 
       <div class="pic"><a href="author.html#Federico"><img src = "images/photos/Federico.jpg "  height="87" width="87" title="Federico"></a></div> 
-      <div class="pic"><a href="author.html#Felipe"><img src = "images/photos/dummy.png "  height="87" width="87" title="Felipe"></a></div> 
+      <div class="pic"><a href="author.html#Felipe"><img src = "images/photos/Felipe.jpg "  height="87" width="87" title="Felipe"></a></div> 
       <div class="pic"><a href="author.html#Frank"><img src = "images/photos/Frank.jpg "  height="87" width="87" title="Frank"></a></div> 
       <div class="pic"><a href="author.html#Gareth"><img src = "images/photos/Gareth.png "  height="87" width="87" title="Gareth"></a></div> 
       <div class="pic"><a href="author.html#Georg"><img src = "images/photos/Georg.jpg "  height="87" width="87" title="Georg"></a></div> 
