add photo for Robert

--- a/author.html
+++ b/author.html
@@ -343,7 +343,7 @@ $(document).ready(function() {
                   <div class="blog1"><a href="http://my.opera.com/it-s/blog/"><img src="images/blog.gif" height="25" width="25"></a></div></div>
                  </div>
                  <div class="entry1" id="Robert">
-                 <div class="entimg"><img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"><img src="images/photos/Robert.jpg" height="200" width="200"></div>
                  <div class="entdet">Robert Kaye combines his love for music and open source into the open music encyclopedia MusicBrainz. Robert founded and leads the Californiabased non-profit MetaBrainz Foundation in a long term effort to improve the digital music experience. Beyond hacking on MusicBrainz, Robert seeks out interesting festivals like Burning Man and interesting side projects like hacking on drink-mixing robots. Topped with a colorful hair style at all times, you will never have a hard time picking him out of a crowd.
                  </div>
                      <div class="lin1">
