--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ $(document).ready(function() {
       <div class="pic"><a href="author.html#Markus"><img src = "images/photos/Markus.jpg "  height="87" width="87" title="Markus"></a></div> 
       <div class="pic"><a href="author.html#Noirin"><img src = "images/photos/Noirin.jpg "  height="87" width="87" title="Noirin"></a></div> 
       <div class="pic"><a href="author.html#Rich"><img src = "images/photos/Rich.jpg "  height="87" width="87" title="Rich"></a></div> 
-      <div class="pic"><a href="author.html#Robert"><img src = "images/photos/dummy.png "  height="87" width="87" title="Robert"></a></div> 
+      <div class="pic"><a href="author.html#Robert"><img src = "images/photos/Robert.jpg "  height="87" width="87" title="Robert"></a></div> 
       <div class="pic"><a href="author.html#Runa"><img src = "images/photos/Runa.jpg "  height="87" width="87" title="Runa"></a></div> 
       <div class="pic"><a href="author.html#Sally"><img src = "images/photos/Sally.jpg "  height="87" width="87" title="Sally"></a></div> 
       <div class="pic"><a href="author.html#Selena"><img src = "images/photos/Selena.jpg "  height="87" width="87" title="Selena"></a></div> 
