fix copy/paste error

--- a/author.html
+++ b/author.html
@@ -194,7 +194,7 @@ $(document).ready(function() {
                  </div>
                  <div class="entry1" id="Mairin">
                  <div class="entimg"><img src="images/photos/Mairin.jpg" height="200" width="200"></div>
-                 <div class="entdet">Máirín Duffy Strode has been using Free and Open Source software since she was in high school, and has been a contributor for the past 8 years. She is involved in both the Fedora and GNOME communities and has worked on interaction design, branding, and/or iconography for a number of prominent FOSS applications such as Spacewalk, Anaconda, virtmanager, SELinux and SSSD. She has also been involved in outreach efforts teaching children design skills using FOSS tools such as GIMP and Inkscape and is a erce advocate for said tools. She is the team lead of the Fedora Design Team and a senior interaction designer with Red Hat, Inc.
+                 <div class="entdet">Máirín Duffy Strode has been using Free and Open Source software since she was in high school, and has been a contributor for the past 8 years. She is involved in both the Fedora and GNOME communities and has worked on interaction design, branding, and/or iconography for a number of prominent FOSS applications such as Spacewalk, Anaconda, virtmanager, SELinux and SSSD. She has also been involved in outreach efforts teaching children design skills using FOSS tools such as GIMP and Inkscape and is a fierce advocate for said tools. She is the team lead of the Fedora Design Team and a senior interaction designer with Red Hat, Inc.
                  </div>
                      <div class="lin1">
                          <div class = "fb"><a href="http://twitter.com/mairin"><img src="images/twitter.png" height="25" width="25"></a></div>
